# 5G_INJECTION

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/: CMakeLists.txt
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/: CMakeLists.txt  scheduler.cc  scheduler.h  ue_tracker.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/ssb/tests/: ssb_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/sync/: syncer.cc  syncer.h
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/sync/tests/: syncer_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/trace_samples/: trace_samples.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/workers/: broadcast_worker.h  gnb_dl_worker.cc  gnb_dl_worker.h  ue_dl_worker.cc  ue_dl_worker.h  ue_ul_worker.h  wd_worker.h
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/comp/workers/tests/: broadcast_worker_rar_test.cc  ue_dl_worker_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/modules/: dg_authentication_replay.cc  dg_authentication_request_sniffer.cc  dummy_exploit.cc  identity_request.cc  mac_sch_mtk_rlc_crash.cc  mac_sch_mtk_rrc_setup_crash_7.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/source/: file_source.cc  source.h  uhd_source.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/: cell_search_test.cc  contention_resolution_test.cc  pdsch_decode_search.cc  pdsch_decode_test.cc  pusch_decode_test.cc  rar_search_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/data/singtel-n1-20MHz/: rach_msg2_ul_grant.raw
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/data/srsran-n3-20MHz/: rach_msg2_ul_grant.raw
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/data/srsran-n78-20MHz/: rach_msg2_ul_grant.raw
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/hardware/: sdr_timing_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/test/msgs/: modify_rrc_setup_test.cc  msg_helper_test.cc  security_mode_command_construction.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/tools/: recorder.cc  resampler.cc
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/utils/: CMakeLists.txt  dci_utils.h  msg_helper.h  phy_cfg_utils.h  thread_pool.h  utils.h
Sni5Gect-5GNR-sniffing-and-exploitation-bak/shadower/utils/src/: arg_parser.cc  ssb_utils.cc  ue_dl_utils.cc  utils.cc  utils.cc.bak
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/: CMakeLists.txt
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/: CMakeLists.txt  scheduler.cc  scheduler.h  ue_tracker.cc  ue_tracker.h
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/apis/: CMakeLists.txt  README.md  apis.cc  apis.h  receiver.py
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/fft/: CMakeLists.txt
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/ssb/: CMakeLists.txt  ssb_cuda.cu
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/sync/: CMakeLists.txt  syncer.cc  syncer.h
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/comp/workers/: CMakeLists.txt  broadcast_worker.cc  broadcast_worker.h  gnb_dl_worker.cc  gnb_dl_worker.h  gnb_ul_worker.cc  gnb_ul_worker.h  ue_dl_worker.cc  ue_dl_worker.h  ue_ul_worker.cc  ue_ul_worker.h  wd_worker.cc  wd_worker.h  wd_worker.h.bak  ws_filter.cc  ws_filter.h
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/modules/: CMakeLists.txt  MAC-CE-Short-BSR-LCG.cc  MAC-CE-TAC.cc  dg_authentication_replay.cc  dg_authentication_request_sniffer.cc  dg_registration_reject.cc  dummy_exploit.cc  dummy_exploit.h  exploit.h  exploit_loader.cc  fdd-reg-rej.cc  identity_request.cc  mac_sch_mtk_rlc_crash.cc  mac_sch_mtk_rrc_setup_crash_3.cc  mac_sch_mtk_rrc_setup_crash_4.cc  mac_sch_mtk_rrc_setup_crash_6.cc  mac_sch_mtk_rrc_setup_crash_7.cc  mac_sch_rrc_setup_crash_var.cc  malform_rrc_setup_complete.cc  malform_rrc_setup_request.cc  plaintext_registration_accept.cc  test_pusch.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/source/: source.cc  uhd_source.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/source/tests/: source_test.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/test/: CMakeLists.txt  asn1_decode_test.cc  cell_search_test.cc  contention_resolution_test.cc  dci_ul_encode_test.cc  pdsch_decode_search.cc  pdsch_decode_test.cc  pdsch_encode_test.cc  pusch_cfo_search.cc  pusch_decode_test.cc  pusch_encode_test.cc  rach_msg3_test.cc  rar_search_test.cc  rrc_setup_test.cc  sib_search_test.cc  test_variables.h
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/test/hardware/: sdr_timing_test.cc  sdr_txrx_decode_test.cc  ssb_frequency_search.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/test/msgs/: modify_rrc_setup_test.cc  msg_helper_test.cc  registration_accept_constructor.cc  rrc_release_construction.cc  security_mode_command_construction.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/tools/: CMakeLists.txt  pcap_writer.cc  recorder.cc  resampler.cc
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/utils/: CMakeLists.txt  arg_parser.h  constants.h  gnb_dl_utils.h  msg_helper.cc  msg_helper.h  phy_cfg_utils.h  rrc_nr_utils_r17.h  safe_queue.h  task.h  ue_dl_utils.h  utils.h
Sni5Gect-5GNR-sniffing-and-exploitation/shadower/utils/src/: arg_parser.cc  arg_parser.cc.bak  dci_utils.cc  gnb_ul_utils.cc  phy_cfg_utils.cc  rrc_nr_utils_r17.cc  ue_dl_utils.cc  ue_ul_utils.cc  utils.cc
sni5gect_100mhz_n41/shadower/modules/: CMakeLists.txt  dg_authentication_request_sniffer.cc  dg_registration_reject.cc  dummy_exploit.cc  dummy_exploit.h  exploit.h  exploit_loader.cc  mac_sch_mtk_rrc_setup_crash_3.cc  mac_sch_mtk_rrc_setup_crash_6.cc  mac_sch_rrc_setup_crash_var.cc  plaintext_registration_accept.cc
sni5gect_100mhz_n41/shadower/source/: CMakeLists.txt
sni5gect_100mhz_n41/shadower/test/: CMakeLists.txt  cell_search_test.cc  ldpc_test.cc  pusch_cfo_search.cc  pusch_encode_test_yg.cc  rrc_setup_test.cc  sib_search_test.cc  ssb_encode_test.cc  test_variables.h
testbed/: README.md  (+1 more)
(+423 files in other folders)
